# ArduinoCore-mockMCU

./: .gitignore  CMakeLists.txt  README.md  board.txt  build_test.sh  platform.txt  run_test.sh
.github/workflows/: cmake-single-platform.yml  compile-examples.yml  compile-tests.yml  run-tests.yml
cores/arduino/: Arduino.h  CMakeLists.txt  HW_IO.h  Stream.h  UART.cpp  UART.h  UART0.cpp  UART1.cpp  UART2.cpp  UART3.cpp  analog.cpp  analog.h  api  digital.cpp  dtostrf.cpp  itoa.cpp
cores/arduino/api/: CMakeLists.txt
extras/: package.sh
libraries/: CMakeLists.txt
libraries/AnalogWave/: analogWave.cpp  analogWave.h
libraries/EEPROM/: CMakeLists.txt  EEPROM.h
libraries/Ethernet/: CMakeLists.txt  Ethernet.h
libraries/SD/: CMakeLists.txt  SD.h
libraries/SD/utility/: Sd2Card.h  SdFat.h  SdFile.cpp
libraries/SPI/: CMakeLists.txt  SPI.cpp  SPI.h
libraries/SoftwareSerial/: CMakeLists.txt  SoftwareSerial.cpp  SoftwareSerial.h
libraries/Wire/: CMakeLists.txt  Wire.cpp  Wire.h
test/: CMakeLists copy.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  build.sh  cmake_install.cmake  run_test.sh
test/HW/cores/cores/arduino/: UART1.cpp  digital.cpp
test/include/: MillisFake.cpp  MillisFake.h  PrintMock.h  PrintableMock1.h  StreamMock1.h
test/src/: CMakeLists.txt  MillisFake.cpp  StreamMock.cpp  main.cpp
test/src/ADC/: CMakeLists.txt  test_adc.cpp
test/src/DOI/: CMakeLists.txt  test_doi.cpp
test/src/SPI/: CMakeLists.txt  test_SPI.cpp
test/src/Serial/: CMakeLists.txt  test_Serial.cpp
test/src/Stream/: CMakeLists.txt  test_find.cpp  test_findUntil.cpp  test_getTimeout.cpp  test_parseFloat.cpp  test_parseInt.cpp  test_readBytes.cpp  test_readBytesUntil.cpp  test_readString.cpp  test_readStringUntil.cpp  test_setTimeout.cpp
test/test_as_externalLib/: CMakeLists.txt  build_test.sh  run_test.sh
test2/: CMakeLists.txt
test3/: CMakeLists.txt
test4/: CMakeLists.txt
test_old/: CMakeLists.txt
test_old/src/: CMakeLists.txt  main.cpp
test_old/src/ADC/: CMakeLists.txt  test_adc.cpp
test_old/src/SPI/: CMakeLists.txt  test_SPI.cpp
test_old/src/Serial/: CMakeLists.txt  test_Serial.cpp
test_old/src/Stream/: CMakeLists.txt
variants/mock_v1/: CMakeLists.txt  defines.txt  pins_arduino.h  variant.cpp
variants/mock_v1/avr/: pgmspace.h
